# SwingInsight

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_news_module_v1.py  0003_news_sentiment_v1.py  0004_pattern_similarity_v1.py  0005_score_validation_log.py  0006_backtest_result.py  0007_pattern_context_features.py  0008_refresh_task.py  0009_market_scan_result.py  0010_watchlist_refresh_task.py
apps/api/config/evaluation/: sample_pool.v1.json
apps/api/scripts/: diagnose_feature_signal.py  run_batch_evaluation.py  run_nightly_market_scan.py  sanity_check_calibration.py  seed_demo_data.py
apps/api/src/swinginsight/: __init__.py  demo_seed.py  settings.py
apps/api/tests/: test_smoke.py
apps/api/tests/api/: test_news_api.py  test_pattern_insight_api.py  test_refresh_api.py  test_score_validation_api.py  test_stock_read_path_no_refresh.py  test_stock_research_assembler.py  test_turning_points_api.py  test_watchlist_api.py
apps/api/tests/db/: test_news_schema.py  test_news_sentiment_schema.py  test_pattern_schema.py  test_schema_smoke.py  test_segment_constraints.py
apps/api/tests/domain/: test_feature_materialization.py  test_news_alignment.py  test_news_feature_v2.py  test_news_features.py  test_news_processing.py  test_news_sentiment_rules.py  test_pattern_features.py  test_pattern_similarity.py  test_point_news_alignment.py  test_prediction_service.py  test_refresh_task_model.py  test_segment_builder.py  (+2 more)
(+214 files in other folders)
